@@ -1060,7 +1060,7 @@
 #      endif
 
 
-#  if defined (WAVE_CURRENT_INTERACTION)
+#  if defined (WAVE_CURRENT_INTERACTION) || (NUOPC)
        XFLUX(I,K) = XFLUX(I,K) + WAVESTRX_3D(I,K)
        YFLUX(I,K) = YFLUX(I,K) + WAVESTRY_3D(I,K)
 #  endif   
