@@ -30,6 +30,8 @@
 !  VERSION 4.3
 !==============================================================================!
 
+# if !defined (NUOPC)
+
 PROGRAM FVCOM
 
   !================================================================================!
@@ -2500,3 +2502,4 @@ IF (ENKF_memberCONTR ==1 ) THEN
   CALL PSHUTDOWN
 
 END PROGRAM FVCOM
+# endif
